<resources>
    <string name="app_name">My Application</string>
    <string name="hello">hello</string>
    <string name="Button">submit</string>
    <string name="phonenumber">phonenumber</string>
    <string name="BMI">BMI</string>
    <string name="weight">weight:</string>
    <string name="height">height:</string>
    <string name="inputRMB">inputRMB</string>
    <string name="rate">Rate:</string>
    <string name="rc">Rate_Conversion</string>
    <string name="dollar">DOLLAR</string>
    <string name="EURO">EURO</string>
    <string name="KRW">KRM</string>
    <string name="config">CONFIG</string>
    <string name="save">save</string>

</resources>