<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateConversion"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#9C27B0"
        android:gravity="center"
        android:text="@string/rc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/inputMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/inputRMB"
        android:gravity="center"
        android:textSize="35dp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="#FF5722"/>

    <TextView
        android:id="@+id/MoneyR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#E91E63"

        android:textSize="33dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/rate"
        android:textColor="#A9A3A3"
        android:textSize="30dp" />
    <Button
        android:id="@+id/dollar_rate"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/dollar"
        android:layout_gravity="center"
        android:onClick="click"
        />
    <Button
        android:id="@+id/euro_rate"
        android:onClick="click"

        android:layout_marginTop="6dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/EURO"
        android:layout_gravity="center"

        />
    <Button
        android:layout_marginTop="6dp"
        android:id="@+id/krm_rate"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/KRW"
        android:layout_gravity="center"
        android:onClick="click"

        />
    <Button
        android:onClick="clickOpen"
        android:layout_marginTop="6dp"
        android:id="@+id/configConfig"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:layout_gravity="center"

        />


</LinearLayout>